--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@prisma/client": "5.19.1",
     "@types/express": "^4.17.21",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "stripe": "^16.11.0"
   }
 }
